add seostats in composer.json

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "project",
     "description": "Autotz web service",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-0": { "": "src/" },
+	"files": [
+         ]
     },
     "require": {
         "php": ">=5.4.3",
@@ -33,7 +35,8 @@
         "knplabs/knp-menu": "2.0.0-beta1",
         "knplabs/knp-menu-bundle": ">=2.0.0-alpha2",
         "pimple/pimple": "1.0.*",
-        "silex/silex":  "1.0.*"
+        "silex/silex":  "1.0.*",
+	"seostats/seostats": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
@@ -58,5 +61,10 @@
         "symfony-app-dir": "app",
         "symfony-web-dir": "web"
     },
-    "repositories": []
+    "repositories": [
+	{
+            "type": "git",
+            "url":  "git@github.com:chasen/SEOstats.git"
+        }
+    ]
 }
